--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3",
+    "systeminformation": "^5.27.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "globals": "^16.0.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
+    "rollup-plugin-copy": "^3.5.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
