--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "os-utils": "^0.0.14",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "systeminformation": "^5.27.1",
     "tailwindcss": "^4.1.10"
