--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
+    "sudo-prompt": "^9.2.1",
     "systeminformation": "^5.27.1",
     "tailwindcss": "^4.1.10"
   },
